--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -11,7 +11,7 @@ layout: compress
 
   <body>
     {% include browser-upgrade.html %} {% include masthead.html %}
-
+    {% if page.body_class %} class="{{ page.body_class }}"{% endif %}
     <div id="main" role="main">
       {% include sidebar.html %}
 
