--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,7 @@
 ---
 layout: blog # ← 关键！向上继承 blog.html（而 blog.html 又继承 default）
+author_profile: true
 ---
-
-<article class="post">{{ content }}</article>
+<article class="post" style="{% if page.font %}--post-font: '{{ page.font }}';{% endif %}">
+  {{ content }}
+</article>
